kube/user/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-deployment
  namespace: shortener-app
  labels:
    app: user-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      labels:
        app: user-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - kubeclass-187
                - kubeclass-188
      containers:
      - name: user-api-container
        image: jwnheo/user-api:latest
        ports:
        - containerPort: 5000
