kube/user/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-api-service
  namespace: shortener-app
spec:
  type: NodePort
  ports:
   - port: 5000
     nodePort: 30003
  selector:
    app: user-api
